style(ui): adjust z-index for sub-menu to ensure proper layering

--- a/css/root.css
+++ b/css/root.css
@@ -231,7 +231,7 @@
   --z-nav: 11;
   --z-header:12;
   --z-submenu-bg: 4;
-  --z-submenu: 5;
+  --z-submenu: 12;
   --z-dropdown: 10;
   --z-modal-backdrop: 100;
   --z-modal: 500;
